Hide online item, fix z-index

--- a/apps/core/static/core/less/based/account_menu_media.less
+++ b/apps/core/static/core/less/based/account_menu_media.less
@@ -7,6 +7,7 @@
         width: 100%;
         right: 0;
         top: 1.87rem;
+        z-index: 2;
 
         &.mobile {
             display: block;
