--- a/apps/core/static/core/less/based/base_media.less
+++ b/apps/core/static/core/less/based/base_media.less
@@ -61,7 +61,7 @@
         overflow: hidden;
         transition: max-height 0.5s cubic-bezier(0.46, 0.03, 0.52, 0.96);
         box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
-        z-index: 2;
+        z-index: 3;
 
         &.show {
             max-height: 20rem;
@@ -99,6 +99,7 @@
     .sticky_navbar_menu {
         margin-top: 1.04rem;
         padding: 0.25rem 0;
+        z-index: 4;
 
         img {
             top: -0.8rem;
@@ -113,6 +114,7 @@
 
     .header_navbar_menu_photo {
         margin-top: -1.125rem;
+        z-index: 3;
     }
 
     .first-screen {
